# pch-framework-adapters

./: .gitignore  LICENSE  README.md
autogen-pathcourse/: README.md  pyproject.toml
autogen-pathcourse/autogen_pathcourse/: __init__.py  config.py
crewai-pathcourse/: README.md  pyproject.toml
crewai-pathcourse/crewai_pathcourse/: __init__.py  llm.py
crewai-pathcourse/tests/: test_llm.py
langchain-pathcourse/: .env.example  README.md  pyproject.toml
langchain-pathcourse-js/: README.md  package.json  tsconfig.json
langchain-pathcourse-js/src/: chat_models.ts  embeddings.ts  index.ts
langchain-pathcourse-js/tests/: chat.test.ts
langchain-pathcourse/langchain_pathcourse/: __init__.py  _api.py  chat_models.py  embeddings.py
langchain-pathcourse/tests/: test_chat.py  test_embeddings.py
pathcourse-ai-sdk/: README.md  package.json  tsconfig.json
pathcourse-ai-sdk/src/: index.ts  pathcourse-embedding.ts  pathcourse-provider.ts
pydantic-ai-pathcourse/: README.md  pyproject.toml
pydantic-ai-pathcourse/pydantic_ai_pathcourse/: __init__.py  model.py
