[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-pathcourse"
version = "0.1.1"
description = "AutoGen / AG2 integration for PathCourse Health — multi-agent inference with autonomous USDC billing on Base L2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["autogen", "ag2", "llm", "ai-agents", "pathcourse", "autonomous", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://pathcoursehealth.com"
Repository = "https://github.com/pathcourse-health/pch-framework-adapters"
Documentation = "https://docs.pathcoursehealth.com"

[project.optional-dependencies]
autogen = ["pyautogen>=0.2.0"]
ag2 = ["ag2>=0.3.0"]
dev = ["pytest", "python-dotenv"]
