[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-pathcourse"
version = "0.1.2"
description = "LangChain integration for PathCourse Health — autonomous agent inference with USDC billing on Base L2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["langchain", "llm", "ai-agents", "pathcourse", "autonomous", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://pathcoursehealth.com"
Repository = "https://github.com/pathcourse-health/pch-framework-adapters"
Documentation = "https://docs.pathcoursehealth.com"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "python-dotenv"]
